--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,3 @@
-something/npm-debug.log
-something/.sass-cache/
 .idea/
-something/node_modules/
-something/public/bower_components
+node_modules/
+public/bower_components
